--- a/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -7,14 +7,29 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2023-10-31 16:19+0000\n"
-"PO-Revision-Date: 2023-10-31 16:19+0000\n"
+"POT-Creation-Date: 2023-03-01 19:22+0100\n"
+"PO-Revision-Date: 2023-03-01 19:23+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
 "Language-Team: fr <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n > 1)\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.9.1\n"
+"Generated-By: Babel 2.12.1\n"
 
+#: templates/3-index.html:4 templates/4-index.html:4 templates/5-index.html:4
+msgid "home_title"
+msgstr "Bienvenue chez Holberton"
+
+#: templates/3-index.html:7 templates/4-index.html:7 templates/5-index.html:7
+msgid "home_header"
+msgstr "Bonjour monde!"
+
+#: templates/5-index.html:11
+msgid "not_logged_in"
+msgstr "Vous n'êtes pas connecté."
+
+#: templates/5-index.html:13
+msgid "logged_in_as"
+msgstr "Vous êtes connecté en tant que %(username)s."
